# decky-ai

./: .gitignore  Makefile  deps.sh  main.py  package.json  plugin.json  py_deps
backend/: Makefile  runningapp.sh
backend/aichat/: Cargo.toml  Cross.toml
backend/aichat/src/: main.rs
src/: index.tsx
src/components/chat-gpt-ui/: AskQuestions.tsx
