[package]
name = "aichat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"]}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
clap = "2.33"
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
edition = "2021"
name="aichat"
path="src/main.rs"
